--- a/MVCMontadoraPP/MVCMontadoraPP/Views/Compras/Index.cshtml
+++ b/MVCMontadoraPP/MVCMontadoraPP/Views/Compras/Index.cshtml
@@ -50,7 +50,10 @@
                 @Html.DisplayFor(modelItem => item.ValorTotal_Compra)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                Opções
+            </td>
+            <td>
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
             </td>
         </tr>
 }
