--- a/MVCMontadoraPP/MVCMontadoraPP/Views/Shared/_Layout.cshtml
+++ b/MVCMontadoraPP/MVCMontadoraPP/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                 <a class="navbar-brand" asp-area="" asp-controller="Funcionarios" asp-action="Index">Funcionários</a>
                 </div>
                 <div class="nav-item">
-                <a class="navbar-brand" asp-area="" asp-controller="Pecas" asp-action="Index">Estoque</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Compras" asp-action="Index">Estoque</a>
                 </div>
                 <div class="nav-item">
                 <a class="navbar-brand" asp-area="" asp-controller="Vendas" asp-action="Index">Vendas</a>
